--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
         <EditText
             android:id="@+id/txtUserName"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_56dp"
+            android:layout_height="66dp"
             android:backgroundTint="@color/md_white"
             android:drawableStart="@drawable/icon_username"
             android:drawablePadding="8dp"
