--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="md_black">#000000</color>
+    <color name="colorPrimary">#0269d0</color>
+    <color name="md_light_green_status">#55b044</color>
+    <color name="colorTextRed">#e42202</color>
 </resources>
