--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,12 @@
     <color name="colorPrimary">#0269d0</color>
     <color name="md_light_green_status">#55b044</color>
     <color name="colorTextRed">#e42202</color>
+    <color name="md_grey_200">#eeeeee</color>
+    <color name="colorTextGrey">#9e9f9f</color>
+    <color name="md_red_500">#f44336</color>
+    <color name="md_red_300">#e57373</color>
+    <color name="md_grey_500">#9e9e9e</color>
+    <color name="backgroundBlue">#00aeef</color>
+    <color name="colorPrimaryDark">#0269d0</color>
+    <color name="md_green_800">#2e7d32</color>
 </resources>
