--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,10 +3,16 @@
     <dimen name="_100dp">100dp</dimen>
     <dimen name="padding_18dp">18dp</dimen>
     <dimen name="_18sp">18sp</dimen>
+    <dimen name="_20sp">20sp</dimen>
     <dimen name="_30dp">30dp</dimen>
     <dimen name="_56dp">56dp</dimen>
     <dimen name="_8dp">8dp</dimen>
+    <dimen name="_4dp">4dp</dimen>
     <dimen name="_16dp">16dp</dimen>
     <dimen name="_16sp">16sp</dimen>
     <dimen name="_24dp">24dp</dimen>
+    <dimen name="_32dp">32dp</dimen>
+    <dimen name="_5dp">5dp</dimen>
+    <dimen name="_12sp">12sp</dimen>
+    <dimen name="_35dp">35dp</dimen>
 </resources>
