--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,6 +84,7 @@
             android:drawableTint="@color/md_white"
             android:fontFamily="sans-serif"
             android:hint="Tên đăng nhập"
+            android:textColor="#FAF6F6"
             android:inputType="text"
             android:paddingStart="@dimen/_8dp"
             android:paddingTop="@dimen/_8dp"
@@ -111,6 +112,7 @@
         <EditText
             android:id="@+id/txtPassword"
             android:layout_width="match_parent"
+            android:textColor="#FAF6F6"
             android:layout_height="@dimen/_56dp"
             android:layout_marginTop="@dimen/_8dp"
             android:backgroundTint="@color/md_white"
