--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -15,4 +15,8 @@
     <dimen name="_5dp">5dp</dimen>
     <dimen name="_12sp">12sp</dimen>
     <dimen name="_35dp">35dp</dimen>
+    <dimen name="_40dp">40dp</dimen>
+
+    <dimen name="_1px">1px</dimen>
+    <dimen name="_2px">2px</dimen>
 </resources>
