--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -128,15 +128,12 @@
     </com.google.android.material.textfield.TextInputLayout>
 
 
-
-
     <Button
         android:id="@+id/btn_login"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="280dp"
         android:backgroundTint="@color/md_white"
-        android:layout_marginBottom="32dp"
         android:gravity="center"
         android:text="ĐĂNG NHẬP"
         android:textAllCaps="false"
@@ -144,10 +141,9 @@
         android:textSize="@dimen/_16sp"
         app:layout_constraintBottom_toTopOf="@+id/tv_language"
         app:layout_constraintEnd_toEndOf="@+id/etPasswordLayout"
-        app:layout_constraintStart_toStartOf="@+id/etPasswordLayout"
+        app:layout_constraintHorizontal_bias="0.495"
 
-        app:layout_constraintVertical_bias="0.0" />
-
+        app:layout_constraintStart_toStartOf="@+id/etPasswordLayout" />
 
     <ImageView
         android:visibility="gone"
