--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,6 +3,7 @@
     <dimen name="_100dp">100dp</dimen>
     <dimen name="padding_18dp">18dp</dimen>
     <dimen name="_18sp">18sp</dimen>
+    <dimen name="_14sp">14sp</dimen>
     <dimen name="_20sp">20sp</dimen>
     <dimen name="_30dp">30dp</dimen>
     <dimen name="_56dp">56dp</dimen>
@@ -15,6 +16,7 @@
     <dimen name="_5dp">5dp</dimen>
     <dimen name="_12sp">12sp</dimen>
     <dimen name="_35dp">35dp</dimen>
+    <dimen name="_10dp">10dp</dimen>
     <dimen name="_40dp">40dp</dimen>
 
     <dimen name="_1px">1px</dimen>
