--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -8,10 +8,15 @@
     <dimen name="_30dp">30dp</dimen>
     <dimen name="_56dp">56dp</dimen>
     <dimen name="_8dp">8dp</dimen>
+    <dimen name="_1dp">1dp</dimen>
+    <dimen name="_3dp">3dp</dimen>
     <dimen name="_4dp">4dp</dimen>
+    <dimen name="_6dp">6dp</dimen>
     <dimen name="_16dp">16dp</dimen>
     <dimen name="_16sp">16sp</dimen>
+    <dimen name="_20dp">20dp</dimen>
     <dimen name="_24dp">24dp</dimen>
+    <dimen name="_28dp">28dp</dimen>
     <dimen name="_32dp">32dp</dimen>
     <dimen name="_5dp">5dp</dimen>
     <dimen name="_12sp">12sp</dimen>
@@ -21,4 +26,7 @@
 
     <dimen name="_1px">1px</dimen>
     <dimen name="_2px">2px</dimen>
+
+    <dimen name="_3sdp">3.00dp</dimen>
+    <dimen name="_6sdp">6.00dp</dimen>
 </resources>
