--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="backgroundBlue">#00aeef</color>
     <color name="colorPrimaryDark">#0269d0</color>
     <color name="md_green_800">#2e7d32</color>
+    <color name="md_green_300">#81c784</color>
 
     <color name="md_grey_300">#e0e0e0</color>
     <color name="md_grey_100">#f5f5f5</color>
