--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -4,4 +4,5 @@
     <color name="md_white">#ffffff</color>
     <color name="md_blue_500">#2196f3</color>
     <color name="md_green_a400">#00e676</color>
+    <color name="colorHint">#546E7A</color>
 </resources>
