--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -4,6 +4,8 @@
     <dimen name="padding_18dp">18dp</dimen>
     <dimen name="_18sp">18sp</dimen>
     <dimen name="_14sp">14sp</dimen>
+    <dimen name="_15sp">15sp</dimen>
+    <dimen name="_16sp">16sp</dimen>
     <dimen name="_20sp">20sp</dimen>
     <dimen name="_30dp">30dp</dimen>
     <dimen name="_56dp">56dp</dimen>
@@ -13,12 +15,13 @@
     <dimen name="_4dp">4dp</dimen>
     <dimen name="_6dp">6dp</dimen>
     <dimen name="_16dp">16dp</dimen>
-    <dimen name="_16sp">16sp</dimen>
+
     <dimen name="_20dp">20dp</dimen>
     <dimen name="_24dp">24dp</dimen>
     <dimen name="_28dp">28dp</dimen>
     <dimen name="_32dp">32dp</dimen>
     <dimen name="_5dp">5dp</dimen>
+    <dimen name="_50dp">50dp</dimen>
     <dimen name="_12sp">12sp</dimen>
     <dimen name="_35dp">35dp</dimen>
     <dimen name="_10dp">10dp</dimen>
